# AI-Debloat

./: README.md  Readme  pyproject.toml
src/ai_debloat/: __init__.py  analyzer.py  cli.py  device.py  knowledge.py  models.py  presets.py  report.py
src/ai_debloat/data/: packages.json  rules.json
tests/: test_analyzer.py  test_knowledge.py
