[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-debloat"
version = "0.1.0"
description = "Advanced, preset-driven Android debloater with safety rails."
authors = [
  { name = "AI Assistant" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ai-debloat = "ai_debloat.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ai_debloat" = ["data/*.json"]
